traefik/traefik-deploy.yaml
# kubectl apply -f traefik-deploy.yaml -n kube-system
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
    - name: web
      port: 80
    - name: websecure
      port: 443
    - name: admin
      port: 8080
  selector:
    app: traefik
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ingress-controller
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 30
      containers:
        - image: traefik:v2.1.2
          name: traefik-ingress-lb
          ports:
            - name: web
              containerPort: 80
              hostPort: 80         # 将容器端口绑定所在服务器的 80 端口
            - name: websecure
              containerPort: 443
              hostPort: 443        # 将容器端口绑定所在服务器的 443 端口
            - name: admin
              containerPort: 8080  # Traefik Dashboard 端口
#          resources:
#            limits:
#              cpu: 2000m
#              memory: 1024Mi
#            requests:
#              cpu: 1000m
#              memory: 1024Mi
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --configfile=/config/traefik.yaml
          volumeMounts:
            - mountPath: "/config"
              name: "config"
      volumes:
        - name: config
          configMap:
            name: traefik-config
      tolerations:              ## 设置容忍所有污点，防止节点被设置污点
        - operator: "Exists"
      # nodeSelector:             ## 设置node筛选器，在特定label的节点上启动  需要先使用 kubectl label nodes <node-name> <label-key>=<label-value> 给节点添加标签
       # IngressProxy: "true"
